bugfix: update/edit team